--- a/src/components/List/styles.scss
+++ b/src/components/List/styles.scss
@@ -1,5 +1,5 @@
 @import '../../scss/bootstrap';
 
 .pd-list {
-  margin-top: map-get($map: $spacers, $key: 5) * 3;
+  margin: map-get($map: $spacers, $key: 5) * 3 0px;
 }
