--- a/src/components/Footer/styles.scss
+++ b/src/components/Footer/styles.scss
@@ -10,18 +10,13 @@
   &__item {
     background-color: $white;
 
-    &-active {
-      background-color: $primary !important;
-    }
-
     &__link {
       outline: none !important;
       border: none !important;
       color: $text-muted;
 
       &-active {
-        color: $white !important;
-        background-color: $primary !important;
+        color: $primary !important;
       }
     }
   }
