refactor(info): add reusable info component for empty and error state

--- a/src/components/Info/styles.scss
+++ b/src/components/Info/styles.scss
@@ -1,6 +1,6 @@
-@import '../../../../scss/bootstrap';
+@import '../../scss/bootstrap';
 
-.pd-empty {
+.pd-info {
   &__image {
     height: 300px;
     width: auto;
