--- a/src/components/List/styles.scss
+++ b/src/components/List/styles.scss
@@ -6,4 +6,8 @@
   @media only screen and (max-width: map-get($map: $grid-breakpoints, $key: lg)) {
     margin: map-get($map: $spacers, $key: 5) * 2 0px !important;
   }
+
+  &__input {
+    margin-bottom: map-get($map: $spacers, $key: 5);
+  }
 }
