refactor: reduce depth of components

--- a/src/components/Loader/styles.scss
+++ b/src/components/Loader/styles.scss
@@ -1,4 +1,4 @@
-@import '../../../../scss/bootstrap';
+@import '../../scss/bootstrap';
 
 .pd-skeleton {
   border-radius: $border-radius !important;
